--- a/code/asset/html/signup.html
+++ b/code/asset/html/signup.html
@@ -2,16 +2,16 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="../css/login.css" />
+    <link rel="stylesheet" href="../css/signup.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>zoom with metaverse</title>
 </head>
 
 <body>
-    <form id = "login_form">
+    <form id = "signup_form">
         <table>
-            로그인
+            회원가입
             <tr>
                 <td><input type="text" name="name" placeholder="id를 입력하세요."></td>
             </tr>
@@ -19,13 +19,11 @@
                 <td><input type="password" name="modelnumber" placeholder="password를 입력하세요."></td>
             </tr>
         </table>
-        <div id = "signbutton">
-            <input type="submit" value="SIGN IN">
-            <input type="button" value= "SIGN UP" onclick="MoveSignUp()">
+        <div id = "signupbutton">
+            <input type="submit" value="DONE">
         </div>
     </form>
 
-    <script src= "../js/login.js"></script>
 </body>
 
 </html>
