--- a/code/asset/html/login.html
+++ b/code/asset/html/login.html
@@ -13,10 +13,10 @@
         <table>
             로그인
             <tr>
-                <td><input type="text" name="name" placeholder="id를 입력하세요."></td>
+                <td><input type="text" name="id" placeholder="id를 입력하세요."></td>
             </tr>
             <tr>
-                <td><input type="password" name="modelnumber" placeholder="password를 입력하세요."></td>
+                <td><input type="password" name="password" placeholder="password를 입력하세요."></td>
             </tr>
         </table>
         <div id = "signbutton">
