sign up + database complete

--- a/code/asset/html/signup.html
+++ b/code/asset/html/signup.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <form id = "signup_form">
+    <form id = "signup_form" method = "post">
         <table>
             회원가입
             <tr>
