login + mysql complete

--- a/code/asset/html/login.html
+++ b/code/asset/html/login.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <form id = "login_form">
+    <form id = "login_form" method = "post">
         <table>
             로그인
             <tr>
