--- a/code/asset/html/world.html
+++ b/code/asset/html/world.html
@@ -10,6 +10,9 @@
 
 <body>
     <canvas id = "view"></canvas>
+
+    
+    <script type = "module" src = "../js/world.js"></script>
 </body>
 
 </html>
