--- a/code/asset/html/world.html
+++ b/code/asset/html/world.html
@@ -9,9 +9,18 @@
 </head>
 
 <body>
-    <canvas id = "view"></canvas>
+    <div id="chat_system">
+        <div id="chat_window"></div>
+        <div id="chat_send">
+            <input id="chat_input" type="text">
+            <button id="chat_send_button">전송</button>
+        </div>
+    </div>
 
-    <script type = "module" src = "../js/world.js"></script>
+    <canvas id="view"></canvas>
+
+    
+    <script type="module" src="../js/world.js"></script>
 </body>
 
 </html>
