make chat system hidden or visible button

--- a/code/asset/html/world.html
+++ b/code/asset/html/world.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <button id = "chat_button" onclick="ChatButtonClick()"></button> 
     <div id="chat_system">
         <div id="chat_window"></div>
         <div id="chat_send">
@@ -19,7 +20,7 @@
 
     <canvas id="view"></canvas>
 
-    
+    <script tupe="module" src="../js/chat_button.js"></script>
     <script type="module" src="../js/world.js"></script>
 </body>
 
