make chatting service completely

--- a/code/asset/html/world.html
+++ b/code/asset/html/world.html
@@ -20,7 +20,9 @@
 
     <canvas id="view"></canvas>
 
-    <script tupe="module" src="../js/chat_button.js"></script>
+    <script src="/dist/socket.io.js"></script>
+    <script src="../js/chat_button.js"></script>
+    <script type="module" src="../js/chat_system.js"></script>
     <script type="module" src="../js/world.js"></script>
 </body>
 
